--- a/Frontend/src/screen/home.css
+++ b/Frontend/src/screen/home.css
@@ -4,7 +4,7 @@
 }
 
 .main{
-    background: linear-gradient(90deg, #070319 0%, #310a5f 100%);
+    background: black;
     width: 100%;
     height: 100%;
 }
@@ -15,7 +15,7 @@
 }
 
 .box1{
-    width: 40vw;
+    width: 500px;
     margin: 30px 50px 0px 110px;
     padding: 12px;
     color: white;
@@ -92,7 +92,7 @@
     width: 100vw;
     height: 50vh;
     color: wheat;
-    background: linear-gradient(90deg, #070319 0%, #310a5f 100%);
+    /* background: linear-gradient(90deg, #070319 0%, #310a5f 100%); */
 }
 
 .container-poll  {
@@ -121,12 +121,6 @@
 #no{
     font-size: large;
     color: #310a5f;
-}
-
-.container{
-    background: linear-gradient(90deg, #070319 0%, #310a5f 100%);
-    width:100vw;
-    height:100vh;
 }
 
 .upcoming{
